jersey forward on 404 errors instead of looking for its error page